Finish local setting

--- a/api/.env.example
+++ b/api/.env.example
@@ -548,3 +548,24 @@ QUEUE_MONITOR_THRESHOLD=200
 QUEUE_MONITOR_ALERT_EMAILS=
 # Monitor interval in minutes, default is 30 minutes
 QUEUE_MONITOR_INTERVAL=30
+
+
+# ------------------------------
+# Custom SSO Configuration
+# ------------------------------
+# Enable or disable custom SSO functionality
+SSO_ENABLED=false
+# SSO Authorization endpoint URL (e.g., http://wm.stg.paic.com.cn/gw/oauth/v2/authorize)
+SSO_AUTH_ENDPOINT=
+# SSO Token endpoint URL (e.g., http://wm.stg.paic.com.cn/gw/oauth/v2/token)
+SSO_TOKEN_ENDPOINT=
+# SSO UserInfo endpoint URL (e.g., http://wm.stg.paic.com.cn/gw/oauth/v2/userInfo)
+SSO_USERINFO_ENDPOINT=
+# SSO OAuth client ID (e.g., Ov23lirUopDC7TuZ3eeD)
+SSO_CLIENT_ID=
+# SSO OAuth client secret (e.g., 479eac814f270a0fad2fe682a8cdbef6bc936b7f)
+SSO_CLIENT_SECRET=
+# SSO OAuth redirect/callback URI (e.g., http://gaadp.fat001.qa.pab.com/apps)
+SSO_REDIRECT_URI=
+# SSO OAuth scopes (space-separated, can be empty)
+SSO_SCOPES=
