--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1231,3 +1231,23 @@ ENABLE_CLEAN_MESSAGES=false
 ENABLE_MAIL_CLEAN_DOCUMENT_NOTIFY_TASK=false
 ENABLE_DATASETS_QUEUE_MONITOR=false
 ENABLE_CHECK_UPGRADABLE_PLUGIN_TASK=true
+
+# ------------------------------
+# Custom SSO Configuration
+# ------------------------------
+# Enable or disable custom SSO functionality
+SSO_ENABLED=false
+# SSO Authorization endpoint URL (e.g., http://wm.stg.paic.com.cn/gw/oauth/v2/authorize)
+SSO_AUTH_ENDPOINT=
+# SSO Token endpoint URL (e.g., http://wm.stg.paic.com.cn/gw/oauth/v2/token)
+SSO_TOKEN_ENDPOINT=
+# SSO UserInfo endpoint URL (e.g., http://wm.stg.paic.com.cn/gw/oauth/v2/userInfo)
+SSO_USERINFO_ENDPOINT=
+# SSO OAuth client ID (e.g., Ov23lirUopDC7TuZ3eeD)
+SSO_CLIENT_ID=
+# SSO OAuth client secret (e.g., 479eac814f270a0fad2fe682a8cdbef6bc936b7f)
+SSO_CLIENT_SECRET=
+# SSO OAuth redirect/callback URI (e.g., http://gaadp.fat001.qa.pab.com/apps)
+SSO_REDIRECT_URI=
+# SSO OAuth scopes (space-separated, can be empty)
+SSO_SCOPES=
