finish local setting

--- a/api/.env.example
+++ b/api/.env.example
@@ -549,6 +549,14 @@ QUEUE_MONITOR_ALERT_EMAILS=
 # Monitor interval in minutes, default is 30 minutes
 QUEUE_MONITOR_INTERVAL=30
 
+# ================================================
+# Login Configuration
+# ================================================
+ENABLE_EMAIL_CODE_LOGIN=true
+ENABLE_EMAIL_PASSWORD_LOGIN=true  
+ENABLE_SOCIAL_OAUTH_LOGIN=false
+ALLOW_REGISTER=true
+ALLOW_CREATE_WORKSPACE=true
 
 # ------------------------------
 # Custom SSO Configuration
